// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Query all fields 1`] = `
Object {
  "data": Object {
    "work": Object {
      "abstract": Array [
        "Dummy The abstract",
      ],
      "creators": Array [
        Object {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
        Object {
          "display": "Dummy Some Corporation",
          "nameSort": "Dummy Some Corporation for sorting",
        },
      ],
      "dk5MainEntry": Object {
        "code": "Dummy some dk5 code",
        "display": "Dummy some dk5 display",
      },
      "fictionNonfiction": Object {
        "code": "FICTION",
        "display": "Dummy skønlitteratur",
      },
      "genreAndForm": Array [
        "Dummy some genre",
      ],
      "mainLanguages": Array [
        Object {
          "display": "Dummy dansk",
          "isoCode": "Dummy dan",
        },
      ],
      "manifestations": Object {
        "all": Array [
          Object {
            "pid": "Dummy some-pid-1",
          },
          Object {
            "pid": "Dummy some-pid-2",
          },
        ],
        "first": Object {
          "pid": "Dummy some-pid-1",
        },
        "latest": Object {
          "pid": "Dummy some-pid-2",
        },
      },
      "materialTypes": Array [
        Object {
          "general": "Dummy general type",
          "specific": "Dummy bog",
        },
      ],
      "series": Array [
        Object {
          "alternativeTitles": Array [
            "Dummy Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "isPopular": true,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": Array [
              1,
            ],
          },
          "parallelTitles": Array [],
          "readThisFirst": true,
          "readThisWhenever": false,
          "title": "Dummy Some Series",
        },
        Object {
          "alternativeTitles": Array [],
          "isPopular": false,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": Array [
              1,
            ],
          },
          "parallelTitles": Array [
            "Dummy  Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "readThisFirst": null,
          "readThisWhenever": null,
          "title": "Dummy Some Series",
        },
      ],
      "seriesMembers": Array [],
      "subjects": Object {
        "all": Array [],
        "dbcVerified": Array [],
      },
      "titles": Object {
        "full": Array [
          "Dummy Some Title: Full",
        ],
        "main": Array [
          "Dummy Some Title",
        ],
        "original": Array [
          "Dummy Some Title Origintal",
        ],
        "parallel": Array [
          "Dummy Parallel Title 1",
          "Dummy Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": Array [
          "Dummy Oversat titel",
        ],
      },
      "universe": Object {
        "title": "Dummy Some Universe",
      },
      "workId": "work-of:870970-basis:26521556",
      "workTypes": Array [
        "LITERATURE",
      ],
      "workYear": "Dummy 1950",
    },
  },
}
`;

exports[`Work fetch by faust 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by id 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by pid 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch multi by faust 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by id 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by pid 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;
